log
Thu Mar 26 04:29:15 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
7ff5955
Thu Mar 26 04:29:59 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
07a5066
Thu Mar 26 06:58:10 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
db8eb4c
Thu Mar 26 07:14:49 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:92:6: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   92 |     *node izq=list->current->prev;
      |      ^~~~
      |      Node
list.c:92:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:92:10: error: expected ‘;’ before ‘izq’
   92 |     *node izq=list->current->prev;
      |          ^~~~
      |          ;
list.c:93:10: error: expected ‘;’ before ‘der’
   93 |     *node der=list->current->next;
      |          ^~~~
      |          ;
list.c:95:5: error: ‘izq’ undeclared (first use in this function)
   95 |     izq->next=der;
      |     ^~~
list.c:95:15: error: ‘der’ undeclared (first use in this function)
   95 |     izq->next=der;
      |               ^~~
c6f2869
Thu Mar 26 07:15:20 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:92:6: error: expected expression before ‘Node’
   92 |     *Node izq=list->current->prev;
      |      ^~~~
list.c:93:6: error: expected expression before ‘Node’
   93 |     *Node der=list->current->next;
      |      ^~~~
list.c:95:5: error: ‘izq’ undeclared (first use in this function)
   95 |     izq->next=der;
      |     ^~~
list.c:95:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:95:15: error: ‘der’ undeclared (first use in this function)
   95 |     izq->next=der;
      |               ^~~
93bf87e
Thu Mar 26 07:18:34 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9fb536b
Thu Mar 26 07:22:41 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d2e1486
Thu Mar 26 07:48:12 PM UTC 2026: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:100:28: error: expected ‘;’ before ‘return’
  100 |         free(list->current)
      |                            ^
      |                            ;
  101 |         return dato;
      |         ~~~~~~              
list.c:95:15: error: variable ‘izq’ set but not used [-Werror=unused-but-set-variable]
   95 |         Node* izq=list->head;
      |               ^~~
list.c:108:28: error: expected ‘;’ before ‘return’
  108 |         free(list->current)
      |                            ^
      |                            ;
  109 |         return dato;
      |         ~~~~~~              
list.c:105:15: error: variable ‘der’ set but not used [-Werror=unused-but-set-variable]
  105 |         Node* der=list->tail;
      |               ^~~
cc1: all warnings being treated as errors
944e417
Thu Mar 26 07:48:49 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:95:15: error: variable ‘izq’ set but not used [-Werror=unused-but-set-variable]
   95 |         Node* izq=list->head;
      |               ^~~
list.c:105:15: error: variable ‘der’ set but not used [-Werror=unused-but-set-variable]
  105 |         Node* der=list->tail;
      |               ^~~
cc1: all warnings being treated as errors
ccf82cc
Thu Mar 26 07:49:01 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:95:15: error: variable ‘izq’ set but not used [-Werror=unused-but-set-variable]
   95 |         Node* izq=list->head;
      |               ^~~
list.c:105:15: error: variable ‘der’ set but not used [-Werror=unused-but-set-variable]
  105 |         Node* der=list->tail;
      |               ^~~
cc1: all warnings being treated as errors
684eb90
Thu Mar 26 07:50:17 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:95:15: error: variable ‘izq’ set but not used [-Werror=unused-but-set-variable]
   95 |         Node* izq=list->head;
      |               ^~~
list.c:104:15: error: variable ‘der’ set but not used [-Werror=unused-but-set-variable]
  104 |         Node* der=list->tail;
      |               ^~~
cc1: all warnings being treated as errors
0fbe3f6
